--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-PORT=5000
-MONGO_URL="mongodb://localhost:27017/chat"
+PORT=5000 
+MONGO_URL="mongodb+srv://piscesscorpio11819:J6DemDu1RhEPbfCR@cluster0.yecpvrw.mongodb.net/?retryWrites=true&w=majority"
